# pybind11_learn

./: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
mylibrary/: __init__.py  command.py  mylib.py  version.py
src/: MyLibrary.cpp  MyLibrary.h  config.h  config.h.in  export_py.cpp  exports.h
